# gendlopen

./: .gitignore  CMakeLists.txt  GNUmakefile  GUIDE.md  LICENSE  Makefile  Makefile.in  Makefile.msvc.mk  Makefile.nmake  Makefile.posix.mk  NMakefile  README.md  c_header.template  cmdline.c  cmdline.ggo  cmdline.h  configure  cxx_header.template  gen_sources.sh  gendlopen.cpp  gendlopen.hpp  gmake.mk  include.mk  lib_macros.template  main.cpp  meson.build  meson_options.txt  quick.sh  rules.mk
.github/workflows/: meson.yml
cross-files/: driver.c  quick-clang-cl.sh  quick-darwin.sh  quick-mingw32.sh  x86_64-apple-darwin24.5.ini  x86_64-apple-darwin24.ini  x86_64-w64-mingw32.ini  x86_64-w64-mingw32.static.ini  x86_64-windows-msvc-clang-17.ini  x86_64-windows-msvc-clang-18.ini  x86_64-windows-msvc-clang-19.ini  x86_64-windows-msvc-clang-20.ini  x86_64-windows-msvc-clang.ini
cross-files/clang-17-bin/: clang-cl
doc/: 00_about.md  01_compiling.md  02_input.md  03_output.md  04_example.md  input.md
examples/: GNUmakefile  Makefile  Makefile.in  Makefile.nmake  README  appindicator-gobject.txt  appindicator-gtk.txt  appindicator.c  appindicator.txt  appindicator_gobject.txt  appindicator_gtk.txt  example_1.c  example_auto_free.c  example_autoload.c  example_cxx.cpp  example_cxx_autoload.cpp  example_cxx_minimal.cpp  example_cxx_multi.cpp  example_cxx_part1.cpp  example_cxx_part2.cpp  example_cxx_wide.cpp  example_helloworld_static_dl.c  example_minimal.c  example_part1.c  example_part2.c  example_wide.c  gmake.mk  gtk.c  gtk.txt  helloworld.c  helloworld.h  helloworld.txt  hook.c  hook.h  hook_glib.txt  meson.build  msgbox.c  msgbox_fltk.txt  msgbox_gtk.txt  msgbox_sdl.txt  (+15 more)
msvc/: Makefile  getopt.h  make.cmd  xxd.c
nmake/: Makefile  README.md
src/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.in  Makefile.msvc  Makefile.nmake  NMakefile  all.cpp  args.cpp  args.hpp  args.hxx  args.hxx.diff  check_pattern.cpp  cin_ifstream.hpp  cio.hpp  cio_ifstream.cpp  cio_ifstream.hpp  cio_ofstream.cpp  cio_ofstream.hpp  clang-ast.cpp  clang-ast.h  clang_ast.cpp  common.hpp  cout_ofstream.hpp  data.cpp  data_embedded.cpp  data_external.cpp  file_to_obj.c  file_to_obj_main.c  filesystem_compat.cpp  filesystem_compat.hpp  gen_coff_obj.c  gen_template_h.c  gen_template_h.sh  gen_template_lib.c  gen_templates_data.c  gendlopen.cpp  gendlopen.hpp  gendlopen.manifest  gendlopen.rc  (+55 more)
src/getopt/: getopt.c
src/msvc/: getopt.c  getopt.h
src/old/: common_prefix.cpp  get_newlines.cpp  tokenize.cpp
src/templates/: README.md  c.c  c.h  c_wrap.c  common.c  common.h  cxx.cpp  cxx.hpp  cxx2.hpp  cxx_wrap.hpp  filename_macros.h  license.h  minimal.h  minimal_cxxeh.hpp  plugin.c  plugin.h
templates/: README.md  c.c  c.h  common.h  cxx.hpp  cxx_wrap.hpp  filename_macros.h  license.h  minimal.h  minimal_cxxeh.hpp
test/: Makefile  Makefile.in  add_bom.sh  ast.txt  c_auto_free.c  c_autoload.c  c_load_symbol.c  c_minimal.c  c_multi_call2.c  c_multi_part1.c  c_multi_part2.c  c_no_date.c  c_option.c  c_prefix.c  c_static_library.c  c_test.c  c_win32_wide.c  c_wrapped_functions.c  cxx_autoload.cpp  cxx_list.cpp  cxx_load_symbol.cpp  cxx_minimal.cpp  cxx_minimal_sdl.cpp  cxx_multi.cpp  cxx_multi.txt  cxx_multi_call2.cpp  cxx_multi_part1.cpp  cxx_multi_part2.cpp  cxx_test.cpp  cxx_win32_wide.cpp  cxx_with_c_minimal_header.cpp  format_text_file.sh  helloworld.c  helloworld.h  helloworld.txt  helloworld2.txt  helloworld_cxx_autoload.txt  meson.build  rules.in  test1.c  (+3 more)
test/00_c/: Makefile.in  main.c  meson.build
test/00_cxx/: Makefile.in  main.cpp  meson.build
test/00_library/: Makefile.in  meson.build
test/00_static_library/: Makefile.in
test/c_auto_release/: main.c  meson.build
test/c_autoload/: main.c  meson.build
test/c_clang_ast/: Makefile.in  ast.txt  main.c  meson.build
test/c_cxx_with_c_header/: Makefile.in  main.cpp  meson.build
test/c_cxx_with_c_minimal_header/: Makefile.in  main.cpp  meson.build
test/c_line/: Makefile.in  main.c  meson.build
test/c_load_symbol/: main.c  meson.build
test/c_minimal/: Makefile.in  main.c  meson.build
test/c_minimal_sdl/: Makefile.in  main.c  meson.build
test/c_multi/: Makefile.in  call2.c  main.c  meson.build  multi.h
test/c_no_date/: Makefile.in  meson.build
test/c_no_line/: Makefile.in
test/c_option/: Makefile.in  helloworld.txt  main.c  meson.build
test/c_param_create/: Makefile.in  helloworld.txt  meson.build
test/c_param_skip/: Makefile.in  meson.build
test/c_prefix/: Makefile.in  main.c  meson.build
test/c_static_library/: main.c  meson.build
test/c_static_linkage/: Makefile.in  main.c  meson.build
test/c_stdin/: Makefile.in  meson.build  read_from_stdin.sh
test/c_win32_wide/: Makefile.in  main.c  meson.build
test/c_wrapped_functions/: main.c  meson.build
test/cxx_autoload/: Makefile.in  main.cpp  meson.build
test/cxx_minimal/: Makefile.in  main.cpp  meson.build
test/cxx_minimal_sdl/: Makefile.in  main.cpp  meson.build
test/cxx_multi/: Makefile.in  call2.cpp  cb.cpp  main.cpp  meson.build  multi.hpp
test/cxx_prefix/: Makefile.in  main.cpp  meson.build
test/cxx_win32_wide/: Makefile.in  main.cpp  meson.build
tests/: c_auto_release.c  c_autoload.c  c_clang_ast.c  c_line.c  c_load_symbol.c  c_minimal.c  c_minimal_sdl.c  c_multi.c  c_multi_call2.c  c_multi_cb.c  c_no_date.c  c_option.c  c_param_create.c  c_param_skip.c  c_prefix.c  c_static_library.c  c_static_linkage.c  c_stdin.c  c_test.c  c_va_args_inline.c  c_win32_dlopen.c  c_win32_wide.c  c_wrapped_functions.c  cxx_autoload.cpp  cxx_minimal.cpp  cxx_prefix.cpp  cxx_test.cpp  cxx_va_args_inline.cpp  cxx_win32_dlopen.cpp  cxx_win32_wide.cpp  cxx_with_c_header.cpp  cxx_with_c_minimal_header.cpp  cxx_wrapped_functions.cpp  helloworld.c  helloworld.txt  helloworld_cxx_autoload.txt  helloworld_option.txt  meson.build  read_from_stdin.c  read_from_stdin.cpp
tests/dlfcn-win32/: c_win32_dlopen.c  cxx_win32_dlopen.cpp  dlfcn.c  meson.build
tests/plugins/: interface.txt  load_plugins.cpp  meson.build  plugin_a.c  plugin_b.c  plugin_c.c
(+7 files in other folders)
