option('enable_examples', type: 'boolean', value: false, description: 'Build examples')
option('enable_tests',    type: 'boolean', value: false, description: 'Build tests')
option('with_gnu_source', type: 'boolean', value: true,  description: 'Build with -D_GNU_SOURCE on Linux')
option('enable_external', type: 'boolean', value: false, description: 'Use external instead of embedded resources')
option('templates_path',  type: 'string', description: 'Set default search path for template files (has no effect if embedded resources are used)')
